# pulsar

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/superpowers/plans/: 2026-05-13-pulsar-features.md
docs/superpowers/specs/: 2026-05-13-pulsar-design.md  2026-05-13-pypi-publishing-design.md
src/pulsar/: db.py  executor.py  main.py  paths.py  scheduler.py  server.py  subproc.py
tests/: test_api.py  test_db.py  test_executor.py  test_paths.py  test_subproc.py
