[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulsar"
version = "0.1.0"
description = "Pulsar — lightweight Python job scheduler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "apscheduler>=3.10,<4",
    "duckdb>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
pulsar = "pulsar.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/pulsar"]
