[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulsar-scheduler"
version = "0.1.0"
description = "Lightweight Python job scheduler with cron, DuckDB, web UI, and CLI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "mz-jy"}]
keywords = ["scheduler", "cron", "job-runner", "duckdb", "process-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "apscheduler>=3.10,<4",
    "duckdb>=1.0",
    "pydantic>=2.0",
]

[project.urls]
Repository = "https://github.com/mz-jy/pulsar"

[project.scripts]
pulsar = "pulsar.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/pulsar"]
